# fems

./: .env.example  .gitignore  CLAUDE.md  Design_System_-_Farm_Energy_Management_System.md  README.md  alembic.ini  architecture.md  design-system.md  docker-compose.yml  modelo_gestao_energia_fazenda_v8.xlsx  pyproject.toml  spreadsheet-schema.md
alembic/: env.py
alembic/versions/: 2b7bf83adfdb_initial_schema.py  3c1a2f5e8b94_porte_grande_e_override.py
scripts/: _extract_from_xlsx.py  gerar_cenarios.py  gerar_dataset.py  gerar_visuais.py  seed_catalog.py
src/fems/: main.py
src/fems/api/: deps.py
src/fems/api/v1/: equipamentos.py  fazendas.py  geracoes.py  tarifas.py
src/fems/core/: config.py  database.py  logging.py
src/fems/data/: __init__.py  catalog_seed.py  clima.py
src/fems/domain/configuration/: enums.py  equipamento.py  geracao.py  tarifa.py
src/fems/domain/instance/: fazenda.py  instanciar.py  override.py  perfil_area.py  ranking.py  resolver.py  resultado.py
src/fems/domain/simulation/: bateria.py  consumo.py  custo.py  engine.py  geracao.py  prng.py  resumo.py  (+1 more)
src/fems/repositories/: equipamento_repository.py  fazenda_repository.py  geracao_repository.py  models.py  tarifa_repository.py
src/fems/services/: equipamento_service.py  fazenda_service.py  geracao_service.py  seed.py  sim_mapping.py  tarifa_service.py
tests/: conftest.py  test_baseline.py  test_smoke.py
tests/fixtures/: faz_001.json  faz_002.json  faz_003.json  faz_custom.json
tests/integration/api/: test_fazendas.py
tests/unit/domain/: test_config_models.py
tests/unit/simulation/: test_consumo_custo.py  test_geracao.py  test_grande.py  test_instanciar.py  test_prng.py  test_ranking.py  test_resolver.py
